fix(pinterest): fix header border on mobile

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -263,7 +263,7 @@
     /** Mobile **/
 
     div[data-test-id="header"] {
-      border-bottom: 1px solid @mantle !important;
+      border-color: @mantle !important;
     }
 
     div.VxL.fZz.hA-.ho-.zI7.iyn.Hsu {
@@ -332,7 +332,7 @@
     }
 
     div[data-test-id="inline-comment-composer-container"] {
-      border-top: 1px solid @mantle !important;
+      border-color: @mantle !important;
     }
 
     /** Mobile **/
